<resources>
    <string name="training_center_info">Training center information</string>
    <string name="hint_distance_bus_stand">Approximate Distance from a prominent Bus Stand (In Mtrs)</string>
    <string name="hint_distance_auto_stand">Approximate Distance from an Auto Stand (In Mtrs)</string>
    <string name="hint_distance_railway_station">Approximate Distance from a Railway Station (In Mtrs)</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="title_ip_enabled_camera">IP enabled camera</string>
    <string name="label_ip_enabled">IP Enabled</string>
    <string name="label_resolution">Resolution - 1080p HD @ 25 FPS or better</string>
    <string name="label_video_stream">Video Stream - Dual H.264 or better</string>
    <string name="label_remote_browser">Remote Access - Via web browser for Configuration, Viewing &amp; Control</string>
    <string name="label_simultaneous_access">Remote Access - Minimum 10 users simultaneously</string>
    <string name="label_supported_protocols">Supported Protocols - IPv4, HTTP, TCP, RTSP, RTP, ICMP, UDP, DNS, DHCP etc.</string>
    <string name="label_color_video_audio">Color Video with Audio</string>
    <string name="label_storage_facility">Storage Facility to keep recording till project closure</string>
    <string name="label_monitor_accessible">Central Monitor accessible to Centre Incharge</string>
    <string name="btn_click_photo">Click photo</string>
    <string name="label_conformance">Conformance of CCTV to DDU-GKY as per Chapter 5 of SOP</string>
    <string name="label_storage_recording">Storage of CCTV Recorded Material</string>
    <string name="label_dvr_static_ip">DVR Connected to Working Static IP as per SF 5.2B</string>
    <string name="btn_submit_cctv">Submit</string>
    <string name="toilets_wash_basins_section_title">Toilets &amp; Wash Basins</string>
    <string name="male_toilets">Male Toilets (In No.)</string>
    <string name="proof_male_toilets">Proof of Male Toilets</string>
    <string name="proof_male_toilets_signage">Proof of Male Toilets Signage</string>
    <string name="female_toilets">Female Toilets (In No.)</string>
    <string name="proof_female_toilets">Proof of Female Toilets</string>
    <string name="proof_female_toilets_signage">Proof of Female Toilets Signage</string>
    <string name="male_urinals">Male Urinals (In No.)</string>
    <string name="proof_male_urinals">Proof of Male Urinals</string>
    <string name="male_wash_basins">Male Wash Basins (In No.)</string>
    <string name="proof_male_wash_basins">Proof of Male Wash Basins</string>
    <string name="female_wash_basins">Female Wash Basins (In No.)</string>
    <string name="proof_female_wash_basins">Proof of Female Wash Basins</string>
    <string name="proof_overhead_tanks">Proof of Overhead Tanks</string>
    <string name="proof_flooring">Proof of Flooring</string>
    <string name="upload">Upload</string>
    <string name="submit_toilet_wash_basin">Submit</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="area">Area</string>
    <string name="fans">Fans</string>
    <string name="circulation_area_hint">Circulation Area (In Sq. Ft.)</string>
    <string name="open_space_hint">Open Space for People to Gather and Interact (In Sq. Ft.)</string>
    <string name="exclusive_parking_space_hint">Exclusive Parking Space (No. of Bicycle Parking Slots)</string>
    <string name="proof_upload">Proof Upload</string>
    <string name="circulation_area_title">Ener Circulation Area (In Sq. Ft.)</string>
    <string name="circulation_proof_upload">Circulation Area Proof Upload</string>
    <string name="open_space_proof_upload">Open Space Proof Upload</string>
    <string name="parking_space_proof_upload">Parking Space Proof Upload</string>
    <string name="upload_proof">Upload Proof</string>
    <string name="upload_circulation_proof">Upload Circulation Proof</string>
    <string name="upload_open_space_proof">Upload Open Space Proof</string>
    <string name="upload_parking_proof">Upload Parking Proof</string>
    <string name="app_name">Ddugky</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="electrical_wiring_title">Electrical Wiring &amp; Standards</string>
    <string name="securing_of_wires">Securing of Wires</string>
    <string name="switch_boards_panel_boards">Switch Boards &amp; Panel Boards</string>
    <string name="upload_photos">Upload photos</string>
    <string name="general_details_title">General Details</string>
    <string name="leakage_check_title">Visible signs of Leakages from Walls and Roof (RCC &amp; Non-RCC)</string>
    <string name="upload_photos_general">Upload photos</string>
    <string name="protection_of_stairs_title">Protection of Stairs, Balconies and Other Locations</string>
    <string name="ddu_look_and_feel_title">Conformance to DDU-GKY Look and Feel Standards (4.2.1)</string>
    <string name="candidate_safety_title">Can the Candidates Safely come to the Centre When Training is Conducted</string>
    <string name="signages_info_boards_title">Signages &amp; Information Boards</string>
    <string name="training_centre_name_board">Training Centre Name Board (SF-4.2B)</string>
    <string name="activity_summary_board">Activity Summary and Achievement Board (SF-4.2D)</string>
    <string name="entitlement_responsibilities_board">Student Entitlement &amp; Responsibilities Board (SF-4.2M)</string>
    <string name="important_contacts_board">Contact Detail of Important People (SF-4.2E)</string>
    <string name="basic_info_board">Basic Information Board at Training Centre (SF-4.2G)</string>
    <string name="code_of_conduct_board">Code of Conduct Board for Candidates (SF-4.2J)</string>
    <string name="attendance_summary_board">Student Attendance &amp; Entitlement Summary Info Board (SF-4.2N)</string>
    <string name="common_equipment_title">Common Equipment</string>
    <string name="electrical_power_backup">Electrical Power Backup</string>
    <string name="biometric_devices_installation">Installation of Biometric Devices</string>
    <string name="enter_details_hint">Enter details</string>
    <string name="cctv_monitor_installation">Installation of CCTV Monitor</string>
    <string name="document_storage_place">Storage Place for Securing Documents</string>
    <string name="printer_scanner_quantity">Printer Cum Scanner (In No.)</string>
    <string name="digital_camera_quantity">Digital Camera (In No.)</string>
    <string name="grievance_register">Grievance Register</string>
    <string name="minimum_equipment_sf_5_1p">Minimum Equipment as per SF 5.1P</string>
    <string name="direction_boards">Direction Boards</string>
    <string name="theory_classroom_title">Theory Class Room Details</string>
    <string name="room_number_label">Room No.</string>
    <string name="room_number_hint">Enter Room Number</string>
    <string name="room_allocation_type_label">Room Allocation Type</string>
    <string name="length_label">Length (In Sq Ft.)</string>
    <string name="length_hint">Enter length in sq ft</string>
    <string name="width_label">Width (In Sq Ft.)</string>
    <string name="width_hint">Enter width in sq ft</string>
    <string name="area_label">Area (In Sq Ft.)</string>
    <string name="area_hint">Enter area or auto-calculate</string>
    <string name="max_candidates_label">Max Permissible Candidates</string>
    <string name="max_candidates_hint">Enter maximum number of candidates</string>
    <string name="roof_type_label">Type of Roof</string>
    <string name="false_ceiling_label">False Ceiling Provided?</string>
    <string name="ceiling_height_label">Height of Ceiling (In ft)</string>
    <string name="ceiling_height_hint">Enter ceiling height in ft</string>
    <string name="ventilation_area_label">Ventilation Area (In Sq. ft)</string>
    <string name="ventilation_area_hint">Enter ventilation area</string>
    <string name="sound_specification_label">Sound level as per Specifications</string>
    <string name="sound_db_label">Sound level (In dB)</string>
    <string name="sound_db_hint">Enter dB level</string>
    <string name="upload_photos_theory_classroom">Upload Photos</string>
    <string name="trainers_section_title">Available Trainers and Other Staff</string>
    <string name="profile_type_label">Profile Type</string>
    <string name="trainer_name_label">Trainer/Staff Name</string>
    <string name="designation_label">Designation</string>
    <string name="engagement_type_label">Engagement Type</string>
    <string name="domain_type_label">Domain/Non-Domain</string>
    <string name="assigned_courses_label">Assigned Courses</string>
    <string name="tot_certified_label">Whether TOT Certified?</string>
    <string name="tot_certification_number_label">TOT Certification No.</string>
    <string name="tot_certification_number_hint">Enter Certification Number</string>
    <string name="cctv_section_title">IP Enabled Camera</string>
    <string name="ip_enabled_label">IP Enabled</string>
    <string name="resolution_label">Resolution - 1080p HD @ 25 FPS or better</string>
    <string name="video_stream_label">Video Stream - Dual H.264 or better</string>
    <string name="remote_access_browser_label">Remote Access - Via web browser for Configuration, Viewing &amp; control</string>
    <string name="remote_access_simultaneous_label">Remote Access - Simultaneously access at any time at minimum 10 users</string>
    <string name="supported_protocols_label">Supported Protocols - As per system design for real-time live monitoring and recording using IPv4, HTTP, TCP, RTSP, RTP, ICMP, UDP, DNS, DHCP etc.</string>
    <string name="color_video_audio_label">Color Video with Audio</string>
    <string name="storage_facility_label">Storage facility to keep the complete recording till closure of project</string>
    <string name="monitor_accessible_label">Central Monitor is easily Accessible to Centre Incharge</string>
    <string name="click_photo">Click photo</string>
    <string name="view"><u>View</u></string>
    <string name="profile_type">Profile Type</string>
    <string name="trainer_staff_name">Trainer/Staff Name</string>
    <string name="designation">Designation</string>
    <string name="engagement_type">Engagement Type</string>
    <string name="domain_non_domain">Domain / Non-Domain</string>
    <string name="assigned_course">Assigned Course</string>
    <string name="whether_tot_certificate">Whether TOT Certificate</string>
    <string name="tot_certificate_no">TOT Certificate No</string>
    <string name="select_approval">Select Approval</string>
    <string name="remarks">Remarks</string>
    <string name="select_approvals">Select Approval<font color='#FF0000'>*</font></string>
    <string name="remarkss">Remarks<font color='#FF0000'>*</font></string>
    <string name="save_and_next">Save and next</string>
    <string name="previous">Previous</string>
    <string name="n_a">N/A</string>
    <string name="counselling_area_photograph">Counselling Area Photograph</string>
    <string name="counselling_room">Counselling Room</string>
    <string name="lights">Lights</string>
    <string name="safe_drinking_water">Safe Drinking Water</string>
    <string name="first_aid_kit">First Aid Kit</string>
    <string name="fire_fighting_equipment">Fire Fighting Equipment</string>
    <string name="availability_of_support_infrastructure">Availability of Support Infrastructure</string>
    <string name="submit">Submit</string>
    <string name="proof_of_reception_area">Proof of Reception Area Photogragh </string>
    <string name="roomno">RoomNo</string>
    <string name="roomarea">RoomArea</string>
    <string name="toilet_type">Toilet Type</string>
    <string name="flooring">Flooring</string>
</resources>