<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/llTopAvailSupportInfra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background_light_grey"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTrainAvailSupportInfra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/avenir_next_semi_bold"
            android:text="@string/availability_of_support_infrastructure"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <View
        android:id="@+id/viewAvailSupportInfra"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_8"
        android:background="#F7F7F7"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/llTopAvailSupportInfra" />

    <!-- Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trainingAvailSupportInfraExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:elevation="@dimen/dp_2"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/viewAvailSupportInfra"
        app:layout_constraintStart_toStartOf="parent">


        <!-- Safe Drinking Water -->
        <TextView
            android:id="@+id/labelSafeDrinkingWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_drinking_water"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/drinkin_water"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/yesNoSafeDrinkingWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:layout_marginStart="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/labelSafeDrinkingWater"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/valueSafeDrinkingWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/color_dark_blue"
            android:layout_marginStart="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/yesNoSafeDrinkingWater"
            app:layout_constraintStart_toStartOf="parent"/>


        <!-- Fire Fighting Equipment -->
        <TextView
            android:id="@+id/labelFireFighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire_fighting_equipment"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/fire"
            app:layout_constraintTop_toBottomOf="@id/valueSafeDrinkingWater"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/yesNoFireFighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:layout_marginStart="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/labelFireFighting"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/valueFireFighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/color_dark_blue"
            android:layout_marginStart="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/yesNoFireFighting"
            app:layout_constraintStart_toStartOf="parent"/>


        <!-- First Aid Kit -->
        <TextView
            android:id="@+id/labelFirstAidKit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_aid_kit"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_15"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/first_aid"
            app:layout_constraintTop_toBottomOf="@id/valueFireFighting"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/yesNoFirstAidKit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_a"
            android:layout_marginStart="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/labelFirstAidKit"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/valueFirstAidKit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/color_dark_blue"
            android:layout_marginStart="@dimen/dp_35"
            app:layout_constraintTop_toBottomOf="@id/yesNoFirstAidKit"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAvailSupportInfra"
            android:text="@string/select_approvals"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@id/valueFirstAidKit"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_demi_bold"
            android:hint="@string/select_approval"
            android:id="@+id/llTcAvailSupportInfra"
            android:layout_marginStart="@dimen/dp_3"
            android:textColorHint="@color/color_dark_green"
            app:boxStrokeColor="@color/color_dark_green"
            app:layout_constraintTop_toBottomOf="@id/llAvailSupportInfra"
            app:layout_constraintStart_toStartOf="parent"
            >

            <AutoCompleteTextView
                android:id="@+id/SpinnerAvailSupportInfra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textColor="@color/color_dark_green"
                android:textSize="15sp"
                tools:ignore="LabelFor"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AvailSupportInfraRemarks"
            android:visibility="gone"
            android:text="@string/remarkss"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/color_dark_green"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@id/llTcAvailSupportInfra"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/etAvailSupportInfraRemarks"
            android:visibility="gone"
            style="@style/EditText"
            android:hint="@string/remarks"
            android:background="@drawable/edittext_background"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/AvailSupportInfraRemarks"
            app:layout_constraintStart_toStartOf="parent"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/llAvailSupportInfraBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAvailSupportInfraRemarks">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/btnAvailSupportInfraPrevious"
                android:elevation="4dp"
                android:text="@string/previous"
                android:textColor="@color/color_dark_blue"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/backgroung_overlay"
                android:layout_margin="8dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/save_and_next"
                android:gravity="center"
                android:id="@+id/btnAvailSupportInfraNext"
                android:textColor="@color/white"
                android:elevation="4dp"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/card_background"
                android:layout_margin="8dp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>