<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@drawable/bg_item_border">

    <TextView
        android:id="@+id/tvRoomNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/roomno"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvRoomArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:text="@string/roomarea"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/maxCandidate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="0"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvWidth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:text="10"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:gravity="center"
        android:text="120"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textColor="@color/color_dark_blue"
        android:textSize="12sp"
        android:drawablePadding="@dimen/dp_5"
        android:drawableStart="@drawable/ic_view"
        android:fontFamily="@font/avenir_next_semi_bold" />

</LinearLayout>
