<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center"
            android:text="@string/counselling_room"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/layoutTCBasicInfoContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:paddingTop="8dp"
                android:text="@string/counselling_area_photograph"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerCounsellingRoomAreaPhotograph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:visibility="gone"
                android:paddingTop="8dp"
                android:text="@string/counselling_area_photograph"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="4dp">

                <Button
                    android:id="@+id/btnCounsellingRoomAreaPhotograph"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:drawableEnd="@drawable/ic_up"
                    android:background="@drawable/bg_upload_button"
                    android:text="@string/upload"
                    android:textSize="12sp" />



                <ImageView
                    android:id="@+id/ivPreviewCounsellingRoomAreaPhotograph"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/bg_image_preview"
                    android:contentDescription="@string/proof_of_reception_area"
                    android:visibility="gone" />



            </LinearLayout>



            <Button
                android:id="@+id/btnSubmitCounsellingRoomDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:backgroundTint="?attr/colorPrimary"
                android:text="@string/submit"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>