<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/bg_item_border">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_4">

        <TextView
            android:id="@+id/tvToiletSerialNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S.N."
            android:textSize="14sp"
            android:fontFamily="@font/avenir_next_semi_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_4">
        <TextView
            android:id="@+id/tvToiletType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toilet_type"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_next_semi_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_4">

        <TextView
            android:id="@+id/tvLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lights"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_next_semi_bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/dp_4">

        <TextView
            android:id="@+id/TvFlooring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flooring"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_next_semi_bold" />
    </LinearLayout>

        <TextView
            android:id="@+id/btnToiletView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view"
            android:textColor="@color/color_dark_blue"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@drawable/ic_view"
            android:fontFamily="@font/avenir_next_semi_bold" />
    
</LinearLayout>